# ambient-task-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: chronicle.md  context-archive.md  context.md  quality-gate-proof.json  sisyphus-baseline.json  sisyphus-state.json
.claude/commands/: asana-done.md  asana-sync.md
.claude/plans/: ops-tool-redesign.md
config/: repos.toml  self-improvement-template.md  skill.md  soul.md
config/skill-templates/: README.md
docs/adr/: 0001-db-separate-tables.md  0002-conversing-manual-status.md  0003-hybrid-session-management.md  0004-append-system-prompt.md  0005-self-improvement-loop.md  0006-tokio-spawn-parallelization.md  0007-llm-classification-learning.md  README.md
plan/: requirements.md
scripts/: cron-sync.sh
skills/: favorite_pop_ops.md  hikken_ops.md  send_survey_mail_ops.md
spec/: context.md  redesign.md  sisyphus-state.json  vision-v3.md
src/: bedrock.rs  claude.rs  config.rs  db.rs  execution.rs  hook.rs  main.rs  priority.rs  repo_config.rs  session.rs  sync.rs
src/agent/: decomposer.rs  mod.rs  orchestrator.rs  scheduler.rs
src/asana/: client.rs
src/calendar/: client.rs
src/google/: calendar.rs
src/kintone/: client.rs  mod.rs  models.rs  poller.rs  query.rs
src/server/: api.rs  hooks.rs  http.rs  mod.rs  slack_actions.rs  slack_events.rs  slack_socket.rs  slack_webhook.rs  webhook.rs
src/skills/: mock_skills.rs  mod.rs  registry.rs  slack_skills.rs
src/slack/: client.rs  mod.rs  mrkdwn.rs
src/worker/: analyzer.rs  classify.rs  context.rs  decomposer.rs  executor.rs  (+13 more)
tools/: hikken_add_subcategory.sh
(+9 files in other folders)
