[package]
name = "ambient-task-agent"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
clap = { version = "4", features = ["derive"] }
dirs = "6"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
